--- a/src/stylesheets/scorecard.scss
+++ b/src/stylesheets/scorecard.scss
@@ -1,3 +1,6 @@
+$menu-color: gray;
+
+
 #frontNine {
   padding: 5% 0 0 0;
 }
@@ -20,10 +23,10 @@
 }
 #holes {
   background-color: whitesmoke;
-  margin: 5% 4% 15% 4%;
+  margin: 25% 4% 15% 4%;
   padding: 3.5%;
   border-radius: 5%/.3%;
-  opacity: .8;
+  opacity: .9;
   position: relative;
   overflow: hidden;
 }
@@ -66,10 +69,10 @@
 }
 .hole-menu {
   width: 35%;
-  margin: 5% 0 0 0;
-  background-color: black;
+  position: fixed;
+  background-color: $menu-color;
   color: white;
-  height: 50%;
+  height: 36%;
   border-bottom-left-radius: 12% 8%;
   border-top-left-radius: 12% 8%;
   padding: 6% 2% 6% 5%;
